--- a/src/AI_BGMLoader/packages.config
+++ b/src/AI_BGMLoader/packages.config
@@ -6,6 +6,7 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.AudioModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.TextRenderingModule" version="2018.2.21.4" targetFramework="net46" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.22" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net46" />
