--- a/src/EC_BGMLoader/packages.config
+++ b/src/EC_BGMLoader/packages.config
@@ -7,6 +7,7 @@
   <package id="IllusionLibs.EmotionCreators.UnityEngine.AudioModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.TextRenderingModule" version="2017.4.24.4" targetFramework="net46" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.4" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
