--- a/src/HS2_BGMLoader/packages.config
+++ b/src/HS2_BGMLoader/packages.config
@@ -8,6 +8,7 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.TextRenderingModule" version="2018.4.11.4" targetFramework="net46" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.UnityWebRequestWWWModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
