--- a/src/HS2_ExtensibleSaveFormat/packages.config
+++ b/src/HS2_ExtensibleSaveFormat/packages.config
@@ -9,5 +9,6 @@
   <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29.5" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.TextRenderingModule" version="2018.4.11.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
 </packages>
