--- a/src/HS2_Sideloader/packages.config
+++ b/src/HS2_Sideloader/packages.config
@@ -11,6 +11,7 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.ImageConversionModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.TextRenderingModule" version="2018.4.11.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.3.3" targetFramework="net46" developmentDependency="true" allowedVersions="(,1.4)" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
