--- a/src/IMGUIModule.Il2Cpp.CoreCLR.Patcher/IMGUIModule.Il2Cpp.CoreCLR.Patcher.csproj
+++ b/src/IMGUIModule.Il2Cpp.CoreCLR.Patcher/IMGUIModule.Il2Cpp.CoreCLR.Patcher.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="BepInEx.Unity.Mono.Preloader" Version="6.0.0-be.668" />
     <PackageReference Include="IllusionLibs.HoneyCome.Assembly-CSharp" Version="2023.99.12.15" />
     <PackageReference Include="IllusionLibs.HoneyCome.UnityEngine" Version="2021.3.14.3" />
+    <PackageReference Include="IllusionLibs.HoneyCome.UnityEngine.UI" Version="2021.3.14.3" />
   </ItemGroup>
 
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
